--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,6 +5,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 1rem;
+	background-color: var(--darkgrey);
 }
 
 .navbar img {
@@ -19,9 +20,35 @@
 	padding: 1rem;
 }
 
+.hamburger {
+	display: none;
+}
+
 @media screen and (max-width: 940px) {
-  .nav-menu {
-    position: absolute;
-    left: -100%;
-  }
+	.nav-menu {
+		position: fixed;
+		left: -100%;
+		top: 100px;
+		flex-direction: column;
+		justify-content: center;
+		background-color: var(--darkgrey);
+		width: 100%;
+		height: 100%;
+		text-align: center;
+		transition: 0.4s;
+	}
+
+	.nav-menu.active {
+		left: 0;
+	}
+
+	.nav-item {
+		margin: 1.5rem;
+		font-size: 1.8rem;
+		justify-content: center;
+	}
+
+	.hamburger {
+		display: flex;
+	}
 }
