--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,6 +1,6 @@
 .hero {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background-color: var(--darkgrey);
 }
 
@@ -77,6 +77,11 @@
   border-radius: 4px;
 }
 
+.social-login span:hover {
+  background-color: var(--grey);
+  cursor: pointer;
+}
+
 .col-2 .divider p {
   width: 100%;
   text-align: center;
@@ -128,4 +133,43 @@ button:hover {
 
 .form footer span {
   font-weight: 500;
+}
+
+@media screen and (max-width: 940px) {
+  .hero {
+    height: auto;
+    max-width: 100%;
+  }
+
+  .hero .container {
+    padding: 0 1rem;
+  }
+
+  .col-1 {
+    height: 90vh;
+    padding: 0.2rem;
+    max-width: 100%;
+  }
+
+  .col-1 p {
+    max-width: 85%;
+  }
+
+  .hero h1 {
+    font-size: 2rem;
+  }
+
+  .hero .content {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .form-layout {
+    width: 320px;
+  }
+
+  .social-login span {
+    padding: 12px 30px 2px;
+    border: 1px solid var(--lightgrey);
+    border-radius: 4px;
+  }
 }
